decompiler/tests/snapshots/test_tool__x86_64_callconv__func124.snap
---
source: decompiler/tests/test_tool.rs
expression: out
---
 --- mil
program  106 instrs
    0 r12: UnknownUnsized <- Ancestral(AncestralName("stack_bottom"))
    1 r2: UnknownUnsized <- Ancestral(AncestralName("CF"))
    2 r3: UnknownUnsized <- Ancestral(AncestralName("PF"))
    3 r4: UnknownUnsized <- Ancestral(AncestralName("AF"))
    4 r5: UnknownUnsized <- Ancestral(AncestralName("ZF"))
    5 r6: UnknownUnsized <- Ancestral(AncestralName("SF"))
    6 r7: UnknownUnsized <- Ancestral(AncestralName("TF"))
    7 r8: UnknownUnsized <- Ancestral(AncestralName("IF"))
    8 r9: UnknownUnsized <- Ancestral(AncestralName("DF"))
    9 r10: UnknownUnsized <- Ancestral(AncestralName("OF"))
   10 r11: UnknownUnsized <- Ancestral(AncestralName("RBP"))
   11 r12: UnknownUnsized <- Ancestral(AncestralName("RSP"))
   12 r13: UnknownUnsized <- Ancestral(AncestralName("RIP"))
   13 r14: UnknownUnsized <- Ancestral(AncestralName("RDI"))
   14 r15: UnknownUnsized <- Ancestral(AncestralName("RSI"))
   15 r16: UnknownUnsized <- Ancestral(AncestralName("RAX"))
   16 r17: UnknownUnsized <- Ancestral(AncestralName("RBX"))
   17 r18: UnknownUnsized <- Ancestral(AncestralName("RCX"))
   18 r19: UnknownUnsized <- Ancestral(AncestralName("RDX"))
   19 r20: UnknownUnsized <- Ancestral(AncestralName("R8"))
   20 r21: UnknownUnsized <- Ancestral(AncestralName("R9"))
   21 r22: UnknownUnsized <- Ancestral(AncestralName("R10"))
   22 r23: UnknownUnsized <- Ancestral(AncestralName("R11"))
   23 r24: UnknownUnsized <- Ancestral(AncestralName("R12"))
   24 r25: UnknownUnsized <- Ancestral(AncestralName("R13"))
   25 r26: UnknownUnsized <- Ancestral(AncestralName("R14"))
   26 r27: UnknownUnsized <- Ancestral(AncestralName("R15"))
   27 r28: UnknownUnsized <- Ancestral(AncestralName("ZMM0"))
   28 r29: UnknownUnsized <- Ancestral(AncestralName("ZMM1"))
   29 r30: UnknownUnsized <- Ancestral(AncestralName("ZMM2"))
   30 r31: UnknownUnsized <- Ancestral(AncestralName("ZMM3"))
   31 r32: UnknownUnsized <- Ancestral(AncestralName("ZMM4"))
   32 r33: UnknownUnsized <- Ancestral(AncestralName("ZMM5"))
   33 r34: UnknownUnsized <- Ancestral(AncestralName("ZMM6"))
   34 r35: UnknownUnsized <- Ancestral(AncestralName("ZMM7"))
   35 r36: UnknownUnsized <- Ancestral(AncestralName("ZMM8"))
   36 r37: UnknownUnsized <- Ancestral(AncestralName("ZMM9"))
   37 r38: UnknownUnsized <- Ancestral(AncestralName("ZMM10"))
   38 r39: UnknownUnsized <- Ancestral(AncestralName("ZMM11"))
   39 r40: UnknownUnsized <- Ancestral(AncestralName("ZMM12"))
   40 r41: UnknownUnsized <- Ancestral(AncestralName("ZMM13"))
   41 r42: UnknownUnsized <- Ancestral(AncestralName("ZMM14"))
   42 r43: UnknownUnsized <- Ancestral(AncestralName("ZMM15"))
   43 r45: UnknownUnsized <- Ancestral(AncestralName("arg0"))
   44 r15: UnknownUnsized <- Get(r45)
   45 r46: UnknownUnsized <- Ancestral(AncestralName("arg1"))
   46 r19: UnknownUnsized <- Get(r46)
   47 r47: UnknownUnsized <- Ancestral(AncestralName("arg2"))
   48 r18: UnknownUnsized <- Get(r47)
   49 r48: UnknownUnsized <- Ancestral(AncestralName("arg3"))
   50 r20: UnknownUnsized <- Get(r48)
   51 r49: UnknownUnsized <- Ancestral(AncestralName("arg4"))
   52 r51: UnknownUnsized <- Part { src: r49, offset: 0, size: 8 }
   53 r50: UnknownUnsized <- ArithK(Add, r12, 8)
   54 r50: UnknownUnsized <- StoreMem { addr: r50, value: r51 }
   55 r51: UnknownUnsized <- Part { src: r49, offset: 8, size: 8 }
   56 r50: UnknownUnsized <- ArithK(Add, r12, 16)
   57 r50: UnknownUnsized <- StoreMem { addr: r50, value: r51 }
   58 r52: UnknownUnsized <- Ancestral(AncestralName("arg5"))
   59 r54: UnknownUnsized <- Part { src: r52, offset: 0, size: 8 }
   60 r53: UnknownUnsized <- ArithK(Add, r12, 24)
   61 r53: UnknownUnsized <- StoreMem { addr: r53, value: r54 }
   62 r54: UnknownUnsized <- Part { src: r52, offset: 8, size: 8 }
   63 r53: UnknownUnsized <- ArithK(Add, r12, 32)
   64 r53: UnknownUnsized <- StoreMem { addr: r53, value: r54 }
   65 r54: UnknownUnsized <- Part { src: r52, offset: 16, size: 8 }
   66 r53: UnknownUnsized <- ArithK(Add, r12, 40)
   67 r53: UnknownUnsized <- StoreMem { addr: r53, value: r54 }
   68 r54: UnknownUnsized <- Part { src: r52, offset: 24, size: 8 }
   69 r53: UnknownUnsized <- ArithK(Add, r12, 48)
   70 r53: UnknownUnsized <- StoreMem { addr: r53, value: r54 }
0x40137f:
   71 r16: UnknownUnsized <- Get(r14)
0x401382:
   72 r46: UnknownUnsized <- Const { value: 24, size: 8 }
   73 r46: UnknownUnsized <- Arith(Add, r46, r12)
   74 r45: UnknownUnsized <- LoadMem { addr: r46, size: 16 }
   75 r47: UnknownUnsized <- Part { src: r28, offset: 16, size: 48 }
   76 r28: UnknownUnsized <- Concat { lo: r45, hi: r47 }
0x401387:
   77 r46: UnknownUnsized <- Const { value: 40, size: 8 }
   78 r46: UnknownUnsized <- Arith(Add, r46, r12)
   79 r45: UnknownUnsized <- LoadMem { addr: r46, size: 16 }
   80 r47: UnknownUnsized <- Part { src: r29, offset: 16, size: 48 }
   81 r29: UnknownUnsized <- Concat { lo: r45, hi: r47 }
0x40138c:
   82 r46: UnknownUnsized <- Part { src: r29, offset: 0, size: 16 }
   83 r47: UnknownUnsized <- Const { value: 16, size: 8 }
   84 r47: UnknownUnsized <- Arith(Add, r47, r14)
   85 r47: UnknownUnsized <- StoreMem { addr: r47, value: r46 }
0x401390:
   86 r46: UnknownUnsized <- Part { src: r28, offset: 0, size: 16 }
   87 r47: UnknownUnsized <- Const { value: 0, size: 8 }
   88 r47: UnknownUnsized <- Arith(Add, r47, r14)
   89 r47: UnknownUnsized <- StoreMem { addr: r47, value: r46 }
0x401393:
   90 r45: UnknownUnsized <- Void
   91 r47: UnknownUnsized <- ArithK(Add, r16, 0)
   92 r48: UnknownUnsized <- LoadMem { addr: r47, size: 8 }
   93 r45: UnknownUnsized <- Concat { lo: r45, hi: r48 }
   94 r47: UnknownUnsized <- ArithK(Add, r16, 8)
   95 r49: UnknownUnsized <- LoadMem { addr: r47, size: 8 }
   96 r45: UnknownUnsized <- Concat { lo: r45, hi: r49 }
   97 r47: UnknownUnsized <- ArithK(Add, r16, 16)
   98 r50: UnknownUnsized <- LoadMem { addr: r47, size: 8 }
   99 r45: UnknownUnsized <- Concat { lo: r45, hi: r50 }
  100 r47: UnknownUnsized <- ArithK(Add, r16, 24)
  101 r51: UnknownUnsized <- LoadMem { addr: r47, size: 8 }
  102 r45: UnknownUnsized <- Concat { lo: r45, hi: r51 }
  103 r45: UnknownUnsized <- Part { src: r45, offset: 0, size: 32 }
  104 r52: UnknownUnsized <- SetReturnValue(r45)
  105 r52: UnknownUnsized <- Control(Ret)


 --- ssa pre-xform
ssa program  106 instrs
.B0:    ;;  → Always(Return).
  (  8)  r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
  (  6)  r13: unknown <UnknownUnsized> <- Ancestral(AncestralName("RDI"))
         r27: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM0"))
         r28: unknown <UnknownUnsized> <- Ancestral(AncestralName("ZMM1"))
  (  2)  r51: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg4"))
         r52: unknown <UnknownUnsized> <- Part { src: r51, offset: 0, size: 8 }
         r53: unknown <UnknownUnsized> <- ArithK(Add, r11, 8)
         r54: unknown <UnknownUnsized> <- StoreMem { addr: r53, value: r52 }
         r55: unknown <UnknownUnsized> <- Part { src: r51, offset: 8, size: 8 }
         r56: unknown <UnknownUnsized> <- ArithK(Add, r11, 16)
         r57: unknown <UnknownUnsized> <- StoreMem { addr: r56, value: r55 }
  (  4)  r58: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg5"))
         r59: unknown <UnknownUnsized> <- Part { src: r58, offset: 0, size: 8 }
         r60: unknown <UnknownUnsized> <- ArithK(Add, r11, 24)
         r61: unknown <UnknownUnsized> <- StoreMem { addr: r60, value: r59 }
         r62: unknown <UnknownUnsized> <- Part { src: r58, offset: 8, size: 8 }
         r63: unknown <UnknownUnsized> <- ArithK(Add, r11, 32)
         r64: unknown <UnknownUnsized> <- StoreMem { addr: r63, value: r62 }
         r65: unknown <UnknownUnsized> <- Part { src: r58, offset: 16, size: 8 }
         r66: unknown <UnknownUnsized> <- ArithK(Add, r11, 40)
         r67: unknown <UnknownUnsized> <- StoreMem { addr: r66, value: r65 }
         r68: unknown <UnknownUnsized> <- Part { src: r58, offset: 24, size: 8 }
         r69: unknown <UnknownUnsized> <- ArithK(Add, r11, 48)
         r70: unknown <UnknownUnsized> <- StoreMem { addr: r69, value: r68 }
         r72: unknown <UnknownUnsized> <- Const { value: 24, size: 8 }
         r73: unknown <UnknownUnsized> <- Arith(Add, r72, r11)
         r74: unknown <UnknownUnsized> <- LoadMem { addr: r73, size: 16 }
         r75: unknown <UnknownUnsized> <- Part { src: r27, offset: 16, size: 48 }
         r76: unknown <UnknownUnsized> <- Concat { lo: r74, hi: r75 }
         r77: unknown <UnknownUnsized> <- Const { value: 40, size: 8 }
         r78: unknown <UnknownUnsized> <- Arith(Add, r77, r11)
         r79: unknown <UnknownUnsized> <- LoadMem { addr: r78, size: 16 }
         r80: unknown <UnknownUnsized> <- Part { src: r28, offset: 16, size: 48 }
         r81: unknown <UnknownUnsized> <- Concat { lo: r79, hi: r80 }
         r82: unknown <UnknownUnsized> <- Part { src: r81, offset: 0, size: 16 }
         r83: unknown <UnknownUnsized> <- Const { value: 16, size: 8 }
         r84: unknown <UnknownUnsized> <- Arith(Add, r83, r13)
         r85: unknown <UnknownUnsized> <- StoreMem { addr: r84, value: r82 }
         r86: unknown <UnknownUnsized> <- Part { src: r76, offset: 0, size: 16 }
         r87: unknown <UnknownUnsized> <- Const { value: 0, size: 8 }
         r88: unknown <UnknownUnsized> <- Arith(Add, r87, r13)
         r89: unknown <UnknownUnsized> <- StoreMem { addr: r88, value: r86 }
         r91: unknown <UnknownUnsized> <- ArithK(Add, r13, 0)
         r92: unknown <UnknownUnsized> <- LoadMem { addr: r91, size: 8 }
         r93: unknown <UnknownUnsized> <- Concat { lo: r90, hi: r92 }
         r94: unknown <UnknownUnsized> <- ArithK(Add, r13, 8)
         r95: unknown <UnknownUnsized> <- LoadMem { addr: r94, size: 8 }
         r96: unknown <UnknownUnsized> <- Concat { lo: r93, hi: r95 }
         r97: unknown <UnknownUnsized> <- ArithK(Add, r13, 16)
         r98: unknown <UnknownUnsized> <- LoadMem { addr: r97, size: 8 }
         r99: unknown <UnknownUnsized> <- Concat { lo: r96, hi: r98 }
         r100: unknown <UnknownUnsized> <- ArithK(Add, r13, 24)
         r101: unknown <UnknownUnsized> <- LoadMem { addr: r100, size: 8 }
         r102: unknown <UnknownUnsized> <- Concat { lo: r99, hi: r101 }
         r103: unknown <UnknownUnsized> <- Part { src: r102, offset: 0, size: 32 }
         r104: unknown <UnknownUnsized> <- SetReturnValue(r103)


 --- cfg
  entry: BlockID(0)
  BlockID(0) -> Always(Return) [r11, r13, r51, r52, r53, r54, r55, r56, r57, r58, r59, r60, r61, r62, r63, r64, r65, r66, r67, r68, r69, r70, r117, r122, r107, r110, r112, r115, r84, r85, r89, r92, r94, r95, r96, r97, r98, r99, r100, r101, r102, r104]
  domtree:
    BlockID(0)

 --- ssa
ssa program  126 instrs
.B0:    ;;  → Always(Return).
  (  6)  r11: unknown <UnknownUnsized> <- Ancestral(AncestralName("RSP"))
  (  6)  r13: unknown <UnknownUnsized> <- Ancestral(AncestralName("RDI"))
  (  2)  r51: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg4"))
         r52: unknown <UnknownUnsized> <- Part { src: r51, offset: 0, size: 8 }
         r53: unknown <UnknownUnsized> <- ArithK(Add, r11, 8)
         r54: unknown <UnknownUnsized> <- StoreMem { addr: r53, value: r52 }
         r55: unknown <UnknownUnsized> <- Part { src: r51, offset: 8, size: 8 }
         r56: unknown <UnknownUnsized> <- ArithK(Add, r11, 16)
         r57: unknown <UnknownUnsized> <- StoreMem { addr: r56, value: r55 }
  (  8)  r58: unknown <UnknownUnsized> <- Ancestral(AncestralName("arg5"))
         r59: unknown <UnknownUnsized> <- Part { src: r58, offset: 0, size: 8 }
         r60: unknown <UnknownUnsized> <- ArithK(Add, r11, 24)
         r61: unknown <UnknownUnsized> <- StoreMem { addr: r60, value: r59 }
         r62: unknown <UnknownUnsized> <- Part { src: r58, offset: 8, size: 8 }
         r63: unknown <UnknownUnsized> <- ArithK(Add, r11, 32)
         r64: unknown <UnknownUnsized> <- StoreMem { addr: r63, value: r62 }
         r65: unknown <UnknownUnsized> <- Part { src: r58, offset: 16, size: 8 }
         r66: unknown <UnknownUnsized> <- ArithK(Add, r11, 40)
         r67: unknown <UnknownUnsized> <- StoreMem { addr: r66, value: r65 }
         r68: unknown <UnknownUnsized> <- Part { src: r58, offset: 24, size: 8 }
         r69: unknown <UnknownUnsized> <- ArithK(Add, r11, 48)
         r70: unknown <UnknownUnsized> <- StoreMem { addr: r69, value: r68 }
         r117: unknown <UnknownUnsized> <- Part { src: r58, offset: 0, size: 8 }
         r122: unknown <UnknownUnsized> <- Part { src: r58, offset: 16, size: 8 }
         r107: unknown <UnknownUnsized> <- Part { src: r58, offset: 8, size: 8 }
         r110: unknown <UnknownUnsized> <- Concat { lo: r107, hi: r117 }
         r112: unknown <UnknownUnsized> <- Part { src: r58, offset: 24, size: 8 }
         r115: unknown <UnknownUnsized> <- Concat { lo: r112, hi: r122 }
         r84: unknown <UnknownUnsized> <- ArithK(Add, r13, 16)
         r85: unknown <UnknownUnsized> <- StoreMem { addr: r84, value: r115 }
         r89: unknown <UnknownUnsized> <- StoreMem { addr: r13, value: r110 }
         r92: unknown <UnknownUnsized> <- LoadMem { addr: r13, size: 8 }
         r94: unknown <UnknownUnsized> <- ArithK(Add, r13, 8)
         r95: unknown <UnknownUnsized> <- LoadMem { addr: r94, size: 8 }
         r96: unknown <UnknownUnsized> <- Concat { lo: r92, hi: r95 }
         r97: unknown <UnknownUnsized> <- ArithK(Add, r13, 16)
         r98: unknown <UnknownUnsized> <- LoadMem { addr: r97, size: 8 }
         r99: unknown <UnknownUnsized> <- Concat { lo: r96, hi: r98 }
         r100: unknown <UnknownUnsized> <- ArithK(Add, r13, 24)
         r101: unknown <UnknownUnsized> <- LoadMem { addr: r100, size: 8 }
         r102: unknown <UnknownUnsized> <- Concat { lo: r99, hi: r101 }
         r104: unknown <UnknownUnsized> <- SetReturnValue(r102)


 --- ast

T0: {
  [pre:RSP + 8]:* := pre:arg4[8 .. 0];
  [pre:RSP + 16]:* := pre:arg4[16 .. 8];
  [pre:RSP + 24]:* := pre:arg5[8 .. 0];
  [pre:RSP + 32]:* := pre:arg5[16 .. 8];
  [pre:RSP + 40]:* := pre:arg5[24 .. 16];
  [pre:RSP + 48]:* := pre:arg5[32 .. 24];
  [pre:RDI + 16]:* := pre:arg5[24 .. 16] ++ pre:arg5[32 .. 24];
  [pre:RDI]:* := pre:arg5[8 .. 0] ++ pre:arg5[16 .. 8];
  ;
  return [pre:RDI + 24]:8 as i8 ++ [pre:RDI + 16]:8 as i8 ++ [pre:RDI + 8]:8 ++ [pre:RDI]:8 as i16 as i24
}
